--- a/antivirus.links.menu.yml
+++ b/antivirus.links.menu.yml
@@ -1,6 +1,12 @@
 ---
-antivirus.admin_form:
+antivirus.admin:
   title: 'Antivirus'
   parent: system.admin_config_media
   description: 'Configure antivirus settings.'
-  route_name: antivirus.admin_form
+  route_name: antivirus.admin
+
+entity.antivirus_scanners.collection:
+  title: 'Scanners'
+  parent: antivirus.admin
+  description: 'Antivirus scanner configuration.'
+  route_name: entity.antivirus_scanners.collection
