--- a/antivirus.info.yml
+++ b/antivirus.info.yml
@@ -3,3 +3,6 @@ description: Scan uploaded files and media for viruses.
 type: module
 core_version_requirement: ^10.2 || ^11
 php: 8.1
+package: Antivirus
+dependencies:
+  - antivirus_core:antivirus_core
