--- a/antivirus.services.yml
+++ b/antivirus.services.yml
@@ -7,38 +7,22 @@ services:
     arguments:
       - 'antivirus.settings'
 
-  config.antivirus.scanners:
-    class: Drupal\Core\Config\Config
-    factory: ['@config.factory', 'get']
-    arguments:
-      - 'antivirus.scanners'
+  logger.channel.antivirus:
+    parent: logger.channel_base
+    arguments: ['AntiVirus']
 
   antivirus.event_subscriber.file_validation_event:
     class: Drupal\antivirus\EventSubscriber\FileValidationEventSubscriber
     arguments:
       - '@antivirus.scan_manager'
-      - '@config.antivirus.settings'
+      - '@validation.constraint'
+      - '@file.recursive_validator'
     tags:
       - { name: 'event_subscriber' }
 
   antivirus.scan_manager:
     class: Drupal\antivirus\Service\ScanManager
     arguments:
-      - '@plugin.manager.antivirus'
+      - '@entity_type.manager'
       - '@event_dispatcher'
-      - '@config.antivirus.scanners'
-
-  logger.channel.antivirus:
-    parent: logger.channel_base
-    arguments: ['AntiVirus']
-
-  plugin.manager.antivirus:
-    class: Drupal\antivirus\PluginDefinition\AntiVirusPluginManager
-    parent: default_plugin_manager
-
-  antivirus.plugin.param_converter:
-    class: Drupal\antivirus\Routing\ParamConverter\AntiVirusPluginParamConverter
-    arguments:
-      - '@plugin.manager.antivirus'
-    tags:
-      - { name: paramconverter }
+      - '@config.antivirus.settings'
